2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b146

 * Fix: Link to codex page.

 * Fix: Language handling in userdata form.

 * Fix: Watermarking was broken since 1.5.5-svn-b16 (!!)

 * Fix: Some broken album options link from root albums.

 * Fix: Still forgot some code for lightbox effect.

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b145

 * Fix: HTML bugs.

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b144

 * Fix: Rebuilding capture dates recursive was slightly broken.

 * New methods:
	Album::isImage
	Album::isImageByIndex
	Album::canViewItem($user, $index, $full = false)

 * Fix: Check of 'Nobody' owns an album item was wrong.

 * Fix: item permission check when embedded in phpBB2

 * Fix: Return false for isOwner when no owner is set.

 * Fix: Only set owner of items to a valid existing user.

 * Fix: getVotingIdByIndex

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b143

 * Renamed:
      photo_owner.php
      delete_photo.php
      move_photo.php
      move_album.php

 into:
      item_owner.php
      delete_item.php
      move_rootalbum.php
      move_albumitem.php

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b142

 * CHANGE: In gallery 1.5.8 'fotoserve.com' was removed.
           So we do now in 1.6

 * Change: Enhanced
		Album::getParentAlbums
		Album::getHighlightTag
		Album::isAlbum

 * Change: Code robustness for loading Albums

 * Change: Added debug infos when saving an album.

 * Fix: Delete an album item only if it exist.

 * Fix: Forgot things for lightbox and sidebar ;-)

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b141

 * New: SWEEET lightbox 2 effect :-)

 * Fix: Improved security of album properties.

 * Change: Layout and grouping of album properties.

 * Fix: Forgot some functions for improved password strength and
        watermarking.

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b140

 * Change: Removed redundant function getFile()

 * Fix: Code robustness in various places.
