@@ -27,7 +27,7 @@ if (!isset($gallery->version)) {
 
 if (!$gallery->user->isAdmin()) {
 	printPopupStart(gTranslate('core', "Administer startpage"), '', 'left');
-	showInvalidReqMesg((gTranslate('core', "You are not allowed to perform this action!"));
+	showInvalidReqMesg(gTranslate('core', "You are not allowed to perform this action!"));
 	exit;
 }
 
