@@ -548,77 +548,6 @@ function hasExif($file) {
 }
 
 /**
- * If an exiftool is installed then gallery tries to pull out EXIF Data.
- * Only fields with data are returned.
- */
-function getExif($file) {
-	global $gallery;
-
-	$return = array();
-	$myExif = array();
-	$unwantedFields = array();
-
-	echo debugMessage(sprintf(gTranslate('core', "Getting Exif from: %s"), $file), __FILE__, __LINE__, 3);
-
-	switch(getExifDisplayTool()) {
-		case 'exiftags':
-			if (empty($gallery->app->exiftags)) {
-				break;
-			}
-
-			$path	= $gallery->app->exiftags;
-			$cmd	= fs_import_filename($path, 1) . ' -au';
-			$target	= fs_import_filename($file, 1);
-
-			list($return, $status) = @exec_internal($cmd . ' ' . $target);
-		break;
-
-		case 'jhead':
-			if (empty($gallery->app->use_exif)) {
-				break;
-			}
-			$path = $gallery->app->use_exif;
-			list($return, $status) = @exec_internal(fs_import_filename($path, 1) .' ' . // -v removed as the structure is different.
-			fs_import_filename($file, 1));
-
-			$unwantedFields = array('File name');
-		break;
-
-		default:
-			return array(false,'');
-		break;
-	}
-
-	if ($status == 0) {
-		foreach ($return as $value) {
-			$value = trim($value);
-
-			if (!empty($value)) {
-				$explodeReturn = explode(':', $value, 2);
-				$exifDesc = trim(htmlentities($explodeReturn[0]));
-				$exifData = trim(htmlentities($explodeReturn[1]));
-
-				if(!empty($exifData) &&
-				!in_array($exifDesc, $unwantedFields) &&
-				!isset($myExif[$exifDesc]))
-				{
-					if (isset($myExif[$exifDesc])) {
-						$myExif[$exifDesc] .= "<br>";
-					}
-					else {
-						$myExif[$exifDesc] = '';
-					}
-
-					$myExif[$exifDesc] .= trim($exifData);
-				}
-			}
-		}
-	}
-
-	return array($status, $myExif);
-}
-
-/**
  * This function tries to get the ItemCaptureDate from Exif Data.
  * If exif is not supported, or no date was gotten, then the file creation date is returned.
  * Note: i used switch/case because this is easier to extend later.
@@ -706,75 +635,6 @@ function padded_range_array($start, $end) {
 	return $arr;
 }
 
-function safe_serialize($obj, $file) {
-	global $gallery;
-
-	if (!strcmp($gallery->app->use_flock, "yes")) {
-		/* Acquire an advisory lock */
-		$lockfd = fs_fopen("$file.lock", "a+");
-		if (!$lockfd) {
-			echo gallery_error(sprintf(gTranslate('core', "Could not open lock file (%s) for writing!"),
-						"$file.lock"));
-			return 0;
-		}
-		if (!flock($lockfd, LOCK_EX)) {
-			echo gallery_error(sprintf(gTranslate('core', "Could not acquire lock (%s)!"),
-						"$file.lock"));
-			return 0;
-		}
-	}
-
-	/*
-	 * Don't use tempnam because it may create a file on a different
-	 * partition which would cause rename() to fail.  Instead, create our own
-	 * temporary file.
-	 */
-	$i = 0;
-	do {
-		$tmpfile = "$file.$i";
-		$i++;
-	} while (fs_file_exists($tmpfile));
-
-	if ($fd = fs_fopen($tmpfile, "wb")) {
-		$buf = serialize($obj);
-		$bufsize = strlen($buf);
-		$count = fwrite($fd, $buf);
-		fclose($fd);
-
-		if ($count != $bufsize || fs_filesize($tmpfile) != $bufsize) {
-			/* Something went wrong! */
-			$success = 0;
-		}
-		else {
-			/*
-			 * Make the current copy the backup, and then
-			 * write the new current copy.  There's a
-			 * potential race condition here if the
-			 * advisory lock (above) fails; two processes
-			 * may try to do the initial rename() at the
-			 * same time.  In that case the initial rename
-			 * will fail, but we'll ignore that.  The
-			 * second rename() will always go through (and
-			 * the second process's changes will probably
-			 * overwrite the first process's changes).
-			 */
-			if (fs_file_exists($file)) {
-				fs_rename($file, "$file.bak");
-			}
-			fs_rename($tmpfile, $file);
-			$success = 1;
-		}
-	}
-	else {
-		$success = 0;
-	}
-
-	if (!strcmp($gallery->app->use_flock, "yes")) {
-		flock($lockfd, LOCK_UN);
-	}
-	return $success;
-}
-
 /**
  * This function left in place to support patches that use it, but please use
  * lastCommentDate functions in classes Album and AlbumItem.
@@ -851,65 +711,6 @@ function canCreateArchive($ext = 'zip') {
 	}
 }
 
-function getArchiveFileNames($archive, $ext) {
-	global $gallery;
-
-	$cmd = '';
-	$files = array();
-
-	if ($tool = canDecompressArchive($ext)) {
-		$filename = fs_import_filename($archive);
-		switch ($tool) {
-			case 'zip':
-				$cmd = fs_import_filename($gallery->app->zipinfo) ." -1 ". $filename;
-				break;
-
-			case 'rar':
-				$cmd = fs_import_filename($gallery->app->rar) ." vb ". $filename;
-				break;
-		}
-
-		list($files, $status) = exec_internal($cmd);
-
-		if (!empty($files)) {
-			sort($files);
-		}
-	}
-
-	return $files;
-}
-
-/* extract a file into Gallery temp dir */
-function extractFileFromArchive($archive, $ext, $file) {
-	global $gallery;
-
-	$cmd_pic_path = str_replace("[", "\[", $file);
-	$cmd_pic_path = str_replace("]", "\]", $cmd_pic_path);
-
-	if($tool = canDecompressArchive($ext)) {
-		echo debugMessage(sprintf(gTranslate('core', "Extracting: %s with %s"), $archive, $tool),__FILE__, __LINE__,3);
-		switch($tool) {
-			case 'zip':
-				$cmd = fs_import_filename($gallery->app->unzip) . " -j -o " .
-				fs_import_filename($archive) . ' ' . fs_import_filename($cmd_pic_path) .
-				' -d ' . fs_import_filename($gallery->app->tmpDir);
-				break;
-
-			case 'rar':
-				$cmd = fs_import_filename($gallery->app->rar) ." e ".
-				fs_import_filename($archive) .' -x '. fs_import_filename($cmd_pic_path) .' '.
-				fs_import_filename($gallery->app->tmpDir);
-				break;
-		}
-
-		return exec_wrapper($cmd);
-	}
-	else {
-		echo debugMessage(sprintf(gTranslate('core', "%s with extension %s is not an supported archive.", $archive, $ext)),__FILE__, __LINE__);
-		return false;
-	}
-}
-
 function createZip($folderName = '', $zipName = '', $deleteSource = true) {
 	global $gallery;
 
@@ -968,18 +769,6 @@ function createZip($folderName = '', $zipName = '', $deleteSource = true) {
 
 function escapeEregChars($string) {
 	return ereg_replace('(\.|\\\\|\+|\*|\?|\[|\]|\^|\$|\(|\)|\{|\}|\=|\!|<|>|\||\:)', '\\\\1', $string);
-}
-
-function findInPath($program) {
-	$path = explode(':', getenv('PATH'));
-
-	foreach ($path as $dir) {
-		if (fs_file_exists("$dir/$program")) {
-			return "$dir/$program";
-		}
-	}
-
-	return false;
 }
 
 /**
@@ -1217,31 +1006,6 @@ function compareVersions($old_str, $new_str) {
 	}
 
 	return 1;
-}
-
-function parse_csv ($filename, $delimiter=";") {
-	echo debugMessage(sprintf(gTranslate('core', "Parsing for csv data in file: %s"), $filename), __FILE__, __LINE__);
-	$maxLength = 1024;
-	$return_array = array();
-
-	if ($fd = fs_fopen($filename, "rt")) {
-		$headers = fgetcsv($fd, $maxLength, $delimiter);
-		while ($columns = fgetcsv($fd, $maxLength, $delimiter)) {
-			$i = 0;
-			$current_image = array();
-			foreach ($columns as $column) {
-				$current_image[$headers[$i++]] = $column;
-			}
-			$return_array[] = $current_image;
-		}
-		fclose($fd);
-	}
-
-	if(isDebugging()){
-	   echo gTranslate('core', "csv result:");
-	   print_r($return_array);
-	}
-	return $return_array;
 }
 
 /**
