@@ -1,3 +1,15 @@
+2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b147
+
+ * Change: Moved some functions into different places.
+
+ * Removed: extractFileFromArchive(), as its not needed anymore.
+
+ * Fix: PHP5 timezone notice.
+
+ * Fix: Forget to add LOAD SESSON for setup.
+
+ * Fix: Some minor code bugs.
+
 2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b146
 
  * Fix: Link to codex page.
